--- a/src/components/search/View.scss
+++ b/src/components/search/View.scss
@@ -5,5 +5,13 @@
 		width: 80%;
 		margin: 0 auto;
 		padding: 45px 0;
+
+		.back {
+			cursor: default;
+
+			span {
+				cursor: pointer;
+			}
+		}
 	}
 }
